modificados los metodos para hacerlos asincronos Generada interfaz para obtener datso de idusuario pendiente revisar test, no se que falla pendiente revisar el enrutado

--- a/src/AppPartes.Web/Views/Main/Index.cshtml
+++ b/src/AppPartes.Web/Views/Main/Index.cshtml
@@ -28,7 +28,7 @@
                 </header>
                 <!-- Content -->
                 <!--<h2 id="content">Sample Content</h2>-->
-                <form asp-action="InsertLine" asp-controller="MainDataApi" method="POST">
+                <form asp-action="InsertLine" asp-controller="Main" method="POST">
                     <div class="col-12">
                         <p>Seleccione la orden de trabajo para su parte de trabajo .</p>
                         <label for="start">Entidad:</label>
