--- a/src/AppPartes.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/src/AppPartes.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -10,66 +10,58 @@
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
+                    <h4>Use a local account to log in.</h4>
+                    <hr />
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group">
 
-                    <label asp-for="Input.Company">Select your Company</label>
-                    @*<select asp-for="lEntity"
-                                asp-items="@(new SelectList(Model.lEntity,"CodEnt","Nombre"))">
-                            <option>Please select one</option>
-                        </select>*@
-                    <select asp-for="Input.Company" required>
-                        <option value=""></option>
+                        <label asp-for="Input.Company">Select your Company</label>
+                        @*<select asp-for="lEntity"
+                                    asp-items="@(new SelectList(Model.lEntity,"CodEnt","Nombre"))">
+                                <option>Please select one</option>
+                            </select>*@
+                        <select asp-for="Input.Company" required>
+                            <option value=""></option>
 
-                        @if (Model.lEntity.listCompany != null)
-                        {
-                            foreach (var dept in Model.lEntity.listCompany)
+                            @if (Model.lEntity.listCompany != null)
                             {
-                                <option value="@dept.CodEnt">
-                                    @dept.Nombre
-                                </option>
+                                foreach (var dept in Model.lEntity.listCompany)
+                                {
+                                    <option value="@dept.CodEnt">
+                                        @dept.Nombre
+                                    </option>
+                                }
                             }
-                        }
-                    </select>
-                    @*<select asp-for="Input.Entity">
-                            <option value="1">ALDAKIN S.L.</option>
-                            <option value="5">ELECTROTECNICA ALAVESA S.L.</option>
-                            <option value="6">ALDAKIN GIPUZKOA S.L.</option>
-                            <option value="7">ALDAKIN AUTOMATION S.L.</option>
-                        </select>*@
-                </div>
-                <div class="form-group">
-                    @*<label asp-for="Input.Email"></label>*@
-                    <label asp-for="Input.Email">User Name</label>
-                    <input asp-for="Input.Email" class="form-control" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe">
-                            <input asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
+                        </select>
                     </div>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="button">Log in</button><!--btn btn-primary-->
-                </div>
-                @*<div class="form-group">
-                        <p>
-                            <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                        </p>
-                        <p>
-                            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                        </p>
-                    </div>*@
+                    <div class="form-group">
+                        @*<label asp-for="Input.Email"></label>*@
+                        <label asp-for="Input.Email">User Name</label>
+                        <input asp-for="Input.Email" class="form-control" />
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.Password"></label>
+                        <input asp-for="Input.Password" class="form-control" />
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                            <label asp-for="Input.RememberMe">
+                                <input type="checkbox" asp-for="Input.RememberMe" />
+                                @Html.DisplayNameFor(m => m.Input.RememberMe)
+                            </label>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="button">Log in</button><!--btn btn-primary-->
+                    </div>
+                    @*<div class="form-group">
+                            <p>
+                                <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                            </p>
+                            <p>
+                                <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                            </p>
+                        </div>*@
             </form>
         </section>
     </div>
