--- a/src/AppPartes.Web/Views/Main/Index.cshtml
+++ b/src/AppPartes.Web/Views/Main/Index.cshtml
@@ -21,6 +21,12 @@
                     {
                         <div class="alert alert-warning">@ViewBag.Message</div>
                     }
+                    if (Model.bMessage)
+                    {
+                        <p>
+                            Tiene mensajes pendientes de leer<b><a class="nav-link text-dark" asp-area="" asp-controller="Message" asp-action="Index">Leer Mensajes</a></b>
+                        </p>
+                    }
                 }
                 <header class="main">
                     <h1>Insertar parte nuevo</h1>
@@ -247,8 +253,8 @@
                                 </table>
                             </div>
                             <!--
-                            <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat commodo eu sed ante lacinia. Sapien a lorem in integer ornare praesent commodo adipiscing arcu in massa commodo lorem accumsan at odio massa ac ac. Semper adipiscing varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
-                                -->
+                <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat commodo eu sed ante lacinia. Sapien a lorem in integer ornare praesent commodo adipiscing arcu in massa commodo lorem accumsan at odio massa ac ac. Semper adipiscing varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+                    -->
                             <hr class="major" />
                         </div>
                         <div class="col-6 col-12-small">
@@ -261,8 +267,8 @@
                             <!--<h3>Magna odio tempus commodo</h3>-->
                             <!--<label><input type="checkbox" id="cbox1" value="first_checkbox"> Este es mi primer checkbox</label><br>-->
                             <!--
-                            <input type="checkbox" id="checkgastos" name="checkgastos" value="true"><br>
-                                -->
+                <input type="checkbox" id="checkgastos" name="checkgastos" value="true"><br>
+                    -->
 
                             <label for="start">NºParte:</label>
                             <input type="text" name="strParte" />
@@ -277,11 +283,11 @@
                                     </option>
                                 }
                                 <!--<option value="NACIONAL">NACIONAL</option>
-                                <option value="INTERNACIONAL">INTERNACIONAL</option>-->
+                    <option value="INTERNACIONAL">INTERNACIONAL</option>-->
                             </select>
                             <!--
-                            <p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan.</p>
-                                -->
+                <p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan.</p>
+                    -->
                             <hr class="major" />
                         </div>
 
@@ -1378,7 +1384,7 @@
             var Tipo = document.getElementById(strTipo);
             var Cantidad = document.getElementById(strCantidad);
             var Observaciones = document.getElementById(strObservaciones);
-            
+
             //if ((Tipo.value == "VARIOS") && (Observaciones.length ==0))
             //{
             //    alert("Varios siempre va con observacion");
