Añadido funcionalidad para administracion, hecha la funcion de actualizar datos y csv, planteada la demas Los Test me tiene loco

--- a/src/AppPartes.Web/Views/WeekReview/Index.cshtml
+++ b/src/AppPartes.Web/Views/WeekReview/Index.cshtml
@@ -367,7 +367,7 @@
                                                 <th>Horas</th>
                                                 <th>Gastos</th>
                                                 <th>Kilometros</th>
-                                                <th>Pernoctacion</th>
+                                                <th>Pernoctación</th>
                                                 <th>Observaciones</th>
                                                 <th>Identificador</th>
                                                 <th>Nº Parte</th>
