--- a/src/AppPartes.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/AppPartes.Web/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
     <li class="nav-item">
 
         @*<a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Entidad/Usuario: @User.Identity.Name</a>*@
-        <a class="nav-link text-dark">Entidad/Usuario: @User.Identity.Name</a>
+        <a class="nav-link text-dark">Ent/User: @User.Identity.Name</a>
     </li>
     <li class="nav-item">
         <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
